src/styles/index.css
:root {
  font-family: "Roboto", system-ui, "Segoe UI", Helvetica, Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  line-height: 1.5;
  font-size: clamp(1rem, 2vw, 1.3rem);
  font-weight: 400;

  color-scheme: dark;

  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

/* Day/night switch tests, doesn't completely work */
.dark-color-mode {
  color-scheme: dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;
}

/* .CV-dark-color-mode {
  color-scheme: dark;
  color: black;
  background-color: #313131;
} */

.light-color-mode {
  color-scheme: light;
  color: rgba(51, 51, 51, 0.87);
  background-color: #f1f1f1;
}

/* .CV-light-color-mode {
  color-scheme: light;
  color: rgba(51, 51, 51, 0.87);
  background-color: #757575;
} */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.flex-container {
  display: flex;
  height: 100vh;
}

/* @media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
} */

